Don't run test application in Windows CI
Hangs.

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,6 +9,9 @@ include $(SMING_HOME)/../Tools/ci/util.mk
 MAKE_ARGS := -C ../samples/Basic_Graphics --no-print-directory
 
 execute:
+ifeq ($(OS)-$(CI),Windows_NT-true)
+	@echo "Skipping test for CI"
+else
 	$(call TestNotify,Basic_Graphics,start)
 	$(Q) $(MAKE) $(MAKE_ARGS) \
 		ENABLE_VIRTUAL_SCREEN=0 \
@@ -17,6 +20,7 @@ execute:
 		SHOWFONT_INTERVAL=100 \
 		python-requirements flash run
 	$(call TestNotify,Basic_Graphics,success)
+endif
 
 %:
 	$(Q) $(MAKE) $(MAKE_ARGS) $@
