Fix CI library build (requires alias)

--- a/.github/workflows/ci-dispatch.yml
+++ b/.github/workflows/ci-dispatch.yml
@@ -16,3 +16,4 @@ jobs:
     with:
       sming_repo: ${{ inputs.sming_repo }}
       sming_branch: ${{ inputs.sming_branch }}
+      alias: Graphics
